[package]
name = "rk-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.10"
