[package]
name = "rk-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bendy = "0.3"
sha1 = "0.10"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
