[package]
name = "rk-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bendy = { version = "0.3", features = ["serde"] }
sha1 = "0.10"
bytes = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["rustls-tls"] }
url = "2.5"
async-trait = "0.1"
rand = "0.8"
