[package]
name = "rkd"
version = "0.1.0"
edition = "2021"

[dependencies]
rk-engine = { path = "../rk-engine" }
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tonic = "0.10"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures = "0.3"
tokio-util = "0.7"
[build-dependencies]
tonic-build = "0.10"
